syntax = "proto3";

package analytics_client;
option go_package = ".;analytics_client_pb";

message HealthCheckRequest {
}

message HealthCheckResponse {
}

message Dish {
  string name = 1;
  int32 price = 2;
}

message AddBillRequest {
  string channelName = 1;
  string storeId = 2;
  string customerName = 3;
  int64 timestamp = 4;
  repeated Dish dishes = 5;
  int32 totalQuantity = 6;
  int64 total = 7;
}

message AddBillResponse {
  bool success = 1;
}

service AnalyticsClient {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {};
  rpc AddBill(AddBillRequest) returns (AddBillResponse) {};
}
